fix: console navigation bar issue in dark mode transparent (#237)
* fix: set color primary instead of neutral (transparent in dark mode)

* refactor: remove unused story

* feat: add story without text

* test: update visual refs

--- a/src/components/basics/NavigationBar/navigation-bar.styles.scss
+++ b/src/components/basics/NavigationBar/navigation-bar.styles.scss
@@ -9,7 +9,7 @@
     animation: show-down-navbar-animation 250ms 250ms ease-in-out 1 backwards;
   }
 
-  background-color: $color-background-neutral;
+  background-color: $color-background-primary;
   padding: $spacing-xs;
   display: flex;
   align-items: flex-start;
